# sorridi_xyz

./: Cargo.toml
front/: home.html  style.css
front/css/: home.css
front/pages/: home.html
src/: main.rs
src/responses/: contents.rs  routes.rs
src/utils/: files.rs  imports.rs
