[package]
name = "sorridi_xyz"
version = "1.1.4"
authors = ["Sorridi <sorridi_tor@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.6.2"
rocket = { version = "0.4.10", features = ["tls"] }
derive-getters = "0.2.0"